src/app/components/ticket-screen/ticket-screen.component.scss
.wrapper {
	width: 100%;
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	justify-content: center;
}

.sideColumn {
	width: 250px;
	height: 100%;
	border: 1px solid black;
}

.ticketOptions {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: flex-start;
}

$btnMargin: 5px;
.ticketOptions > button {
	margin: $btnMargin;
	width: calc(100% - $btnMargin - $btnMargin);
	height: 100px;
	font-size: 1.4em;
	border: 1px solid black;
}

.ticketOptions > button mat-icon {
	transform: translateY(-3px);
}

.ticketOptions .amountSelect {
	margin: $btnMargin;
	width: calc(100% - $btnMargin - $btnMargin);
	text-align: center;
	font-size: 1.4em;
	border: 1px solid black;
	margin-top: 50px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	position: relative;
	height: 100px;
}
.ticketOptions .amountSelect mat-icon {
	transform: scale(2);
}
.ticketOptions .amountSelect button {
	width: 100%;
	height: 50%;
}
.ticketOptions .amountSelect .topBt {
	padding-bottom: 10px;
}
.ticketOptions .amountSelect .botBt {
	padding-top: 10px;
}
.ticketOptions .amountSelect .amountDisplay {
	position: absolute;
	top: 33%;
	z-index: 50;
	pointer-events: none;
	user-select: none;
}

.ticketSelect {
	flex-grow: 1;
	padding-top: 20px;
}

app-ticket-button {
	display: flex;
	align-items: center;
	justify-content: center;
	margin-top: 40px;
}

.shoppingCart {
	width: 350px;
	padding: 5px;
	padding-top: 0px;
}

.shoppingCart .cartTotal {
	font-size: 1.4em;
	font-weight: bold;
	margin-bottom: 5px;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	padding: 0 5px;
}

.shoppingCart .buttons {
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: space-evenly;
}

.shoppingCart .buttons > button {
	height: 80px;
	border: 1px solid black;
}

.shoppingCart .buttons > button:not(:first-child) {
	margin-left: 5px;
}

.shoppingCart .buttons .clearBt {
	width: 80px;
	padding: 0px 0px;
}

.shoppingCart .buttons .clearBt mat-icon {
	transform: scale(2);
}

.shoppingCart .buttons .confirmBt {
	flex-grow: 1;
	font-size: 1.5em;
}

.shoppingCart .ticket {
	border: 1px solid black;
	margin-bottom: 10px;
	font-size: 1.5em;
}

.shoppingCart .ticketHeader {
	border-bottom: 1px solid black;
	padding: 3px 5px;
	font-weight: bold;
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
}

.shoppingCart .ticketBody {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	padding-left: 5px;
	height: 100px;
}

.shoppingCart .ticketBody button {
	height: 100%;
	width: 120px;
	margin-left: 10px;
	border-left: 1px solid black;
}

.shoppingCart .cartContents {
	height: calc(100% - 140px);
	user-select: none;
}

.ticketInfo {
	width: 100%;
	height: var(--height-full-noHeader);
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	justify-content: space-between;
	padding: 5px 50px;
}

.ticketInfo img {
	width: auto;
	height: calc(100% - 10px);
}

